Aggiunta stringa sotto icone

--- a/web/inner-pages/home.html
+++ b/web/inner-pages/home.html
@@ -39,6 +39,15 @@
         </div>
 
     </div>
+
+    <div class="col-md-3"></div>
+
+    <div id="sentence" class="row">
+        <div class="col-md-3">
+            <p>You're not logged in! Log in or <a href="#registration">register</a>.</p>
+        </div>
+     </div>
+
 </div>
 
 
