--- a/web/inner-pages/home.html
+++ b/web/inner-pages/home.html
@@ -44,7 +44,7 @@
 
     <div id="sentence" class="row">
         <div class="col-md-3">
-            <p>You're not logged in! Log in or <a href="#registration">register</a>.</p>
+            <p>You're not logged in! <a href="#login">Log in</a> or <a href="#registration">register</a>.</p>
         </div>
      </div>
 
