Home non loggato
Link disattivati per utente non loggato

--- a/web/inner-pages/home.html
+++ b/web/inner-pages/home.html
@@ -23,42 +23,42 @@
 
 
         <div class="col-md-3" data-toggle="popover" data-trigger="hover" data-content="Make a Google Calendar recipe">
-            <a href="#gCalendar"  ><img src="../images/gcalendar.png" height="200" width="200" class="img-responsive center-block"/></a>
+           <!-- <a href="#gCalendar">--><img src="../images/gcalendar.png" height="200" width="200" class="img-responsive center-block"/><!--</a>-->
         </div>
 
         <div class="col-md-3" data-toggle="popover" data-trigger="hover" data-content="Make a Google Mail recipe">
-            <a href="#gMail" ><img src="../images/gmail.png" height="200" width="200" class="img-responsive center-block"/></a>
-        </div>
+            <!-- <a href="#gMail" >--> <img src="../images/gmail.png" height="200" width="200" class="img-responsive center-block"/><!--</a>-->
+         </div>
 
-        <div class="col-md-3" data-toggle="popover" data-trigger="hover" data-content="Make a Weather recipe">
-            <a href="#yWeather" ><img src="../images/weather.png" height="200" width="200" class="img-responsive center-block"/></a>
-        </div>
+         <div class="col-md-3" data-toggle="popover" data-trigger="hover" data-content="Make a Weather recipe">
+            <!-- <a href="#yWeather" >--><img src="../images/weather.png" height="200" width="200" class="img-responsive center-block"/><!--</a> -->
+         </div>
 
-        <div class="col-md-3" data-toggle="popover" data-trigger="hover" data-content="Make a Facebook recipe">
-            <a href="#twitter" ><img src="../images/twitter.png" height="200" width="200" class="img-responsive center-block"/></a>
-        </div>
+         <div class="col-md-3" data-toggle="popover" data-trigger="hover" data-content="Make a Facebook recipe">
+            <!-- <a href="#twitter" > --><img src="../images/twitter.png" height="200" width="200" class="img-responsive center-block"/><!--</a> -->
+         </div>
 
-    </div>
-
-    <div class="col-md-3"></div>
-
-    <div id="sentence" class="row">
-        <div class="col-md-3">
-            <p>You're not logged in! <a href="#login">Log in</a> or <a href="#registration">register</a>.</p>
-        </div>
      </div>
 
-</div>
+     <div class="col-md-3"></div>
+
+     <div id="sentence" class="row">
+         <div class="col-md-3">
+             <p>You're not logged in! <a href="#login">Log in</a> or <a href="#registration">register</a>.</p>
+         </div>
+      </div>
+
+ </div>
 
 
-</body>
+ </body>
 
-<script>
-    $(document).ready(function(){
-        $('[data-toggle="popover"]').popover({
-            placement: 'bottom'
-        });
-    });
-</script>
+ <script>
+     $(document).ready(function(){
+         $('[data-toggle="popover"]').popover({
+             placement: 'bottom'
+         });
+     });
+ </script>
 
-</html>
+ </html>
