LOG IN nell'engine
ho inserito  il Provider logged in dentro engine

--- a/web/inner-pages/home_logged.html
+++ b/web/inner-pages/home_logged.html
@@ -41,3 +41,15 @@
     </div>
 
 </div>
+
+</body>
+
+<script>
+    $(document).ready(function(){
+        $('[data-toggle="popover"]').popover({
+            placement: 'bottom'
+        });
+    });
+</script>
+
+</html>
