--- a/web/inner-pages/loginPage.html
+++ b/web/inner-pages/loginPage.html
@@ -49,7 +49,7 @@
                                     <input type="password" class="form-control" id="pwd" placeholder="insert your password" required=""
                                        ng-model="user.pwd" name="pwd"
                                        ng-minlength="2"
-                                       ng-maxlength="20"
+                                       ng-maxlength="20">
                                     <div ng-show="form.pwd.$invalid && !form.pwd.$pristine || form.$submitted || form.pwd.$touched">
                                         <span ng-show="form.pwd.$error.required" style="color: #b81900">The password is mandatory</span>
                                         <span ng-show="form.pwd.$error.minlength" style="color: #b81900">Password is too short.</span>
