Gmail Sub trigger
Inserita pagina sub trigger -> Home, Sub Trigger e poi Gmail

--- a/web/inner-pages/home_logged.html
+++ b/web/inner-pages/home_logged.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="col-md-3" data-toggle="popover" data-trigger="hover" data-content="Make a Google Mail recipe">
-            <a href="#gMail" ><img src="../images/gmail.png" height="200" width="200" class="img-responsive center-block"/></a>
+            <a href="#SubGMail" ><img src="../images/gmail.png" height="200" width="200" class="img-responsive center-block"/></a>
         </div>
 
         <div class="col-md-3" data-toggle="popover" data-trigger="hover" data-content="Make a Weather recipe">
