--- a/web/inner-pages/gMail_SubTrigger.html
+++ b/web/inner-pages/gMail_SubTrigger.html
@@ -10,23 +10,23 @@
 <br>
 <br>
 
-
 <div class="row">
     <div class="col-md-12">
         <div class="row">
             <div class="col-md-4">
             </div>
             <div class="col-md-4">
+                <p><h1>Choose your trigger</h1></p>
                 <form id="gmail-form" role="form" name="form" ng-controller="recoveruserpasswordController" novalidate>
                     <div class="form-group">
-                        <label style="color:rgba(0, 0, 0, 0.78)">Insert email or the object:</label>
+                        <label style="color:rgba(0, 0, 0, 0.78)">Insert email</label>
                         <input type="email" class="form-control" id="email" placeholder="insert your email"
                                ng-model="gmailinput.email" required="" name="uEmail" >
                         <br>
 
                         <!--Subject e.mail -->
                         <div class="form-group">
-                            <label for="comment">Subject e.mail:</label>
+                            <label for="comment">or / and the object</label>
                             <textarea class="form-control" rows="5" id="subjectReceive"  placeholder="insert the subject"
                                       ng-model="gmailinput.subjectReceive"  name="subjectReceive"
                             ></textarea>
