Inserito Sub Action
Inserito Sub Action VIVA LE PROSTITUTE

--- a/web/inner-pages/gMail_SubAction.html
+++ b/web/inner-pages/gMail_SubAction.html
@@ -16,7 +16,7 @@
             <div class="col-md-4">
             </div>
             <div class="col-md-4">
-                <p><h1>Choose your trigger</h1></p>
+                <p><h1>Choose your action</h1></p>
                 <form id="gmail-form" role="form" name="form" ng-controller="recoveruserpasswordController" novalidate>
                     <div class="form-group">
                         <label style="color:rgba(0, 0, 0, 0.78)">Insert email</label>
