--- a/web/inner-pages/gMail_SubTrigger.html
+++ b/web/inner-pages/gMail_SubTrigger.html
@@ -33,7 +33,7 @@
                         </div>
 
                         <a  type="submit" class="btn btn-primary" href="#logged_in" >Home</a>
-                        <a  type="submit" class="btn btn-primary"  href="#gMail" >Next</a>
+                        <a  type="submit" class="btn btn-primary"  href="#SubGMailAction" >Next</a>
 
                     </div>
             </div>
