effetto check dopo mail action

--- a/web/inner-pages/emailSuccess.html
+++ b/web/inner-pages/emailSuccess.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link rel="stylesheet" href="../css/emailSuccess/emailSuccess.css" type="text/css">
+    <script src="../css/emailSuccess/check.js"></script>
+
 </head>
 <body>
 <br>
@@ -16,28 +20,11 @@
             <div class="col-md-4">
             </div>
             <div class="col-md-4">
-                <p><h1>Choose your action</h1></p>
-                <form id="gmail-form" role="form" name="form" ng-controller="recoveruserpasswordController" novalidate>
-                    <div class="form-group">
-                        <label style="color:rgba(0, 0, 0, 0.78)">Insert email</label>
-                        <input type="email" class="form-control" id="email" placeholder="insert your email"
-                               ng-model="gmailinput.email" required="" name="uEmail" >
-                        <br>
-
-                        <!--Subject e.mail -->
-                        <div class="form-group">
-                            <label for="comment">or / and the object</label>
-                            <textarea class="form-control" rows="5" id="subjectReceive"  placeholder="insert the subject"
-                                      ng-model="gmailinput.subjectReceive"  name="subjectReceive"
-                            ></textarea>
-                        </div>
-
-                        <a  type="submit" class="btn btn-primary" href="#logged_in" >Home</a>
-                        <a  type="submit" class="btn btn-primary"  href="#gMail" >Finish!</a>
-
-                    </div>
+                <p><h1>SUCCESS!!!</h1></p>
+                <canvas height="400"></canvas>
             </div>
-            <div class="col-md-4">
+
+
             </div>
         </div>
     </div>
