--- a/web/inner-pages/gMail_SubTrigger.html
+++ b/web/inner-pages/gMail_SubTrigger.html
@@ -33,8 +33,8 @@
                             ></textarea>
                         </div>
                     <div>
-                        <button  type="submit" class="btn btn-primary" href="#logged_in" >Home</button>
-                        <button  type="submit" class="btn btn-primary"  href="#SubGMailAction" ng-click="triggerGmail(gmailinput)">Next</button>
+                        <a  type="submit" class="btn btn-primary" href="#logged_in" >Home</a>
+                        <a  type="submit" class="btn btn-primary"  href="#SubGMailAction" ng-click="triggerGmail(gmailinput)">Next</a>
                     </div>
 
                     </form>
