Link da Action a SUCCESS!!
collegamento che va da Action a Email Success

--- a/web/inner-pages/gMail_SubAction.html
+++ b/web/inner-pages/gMail_SubAction.html
@@ -33,7 +33,7 @@
                         </div>
 
                         <a  type="submit" class="btn btn-primary" href="#logged_in" >Home</a>
-                        <a  type="submit" class="btn btn-primary"  href="#gMail" >Finish!</a>
+                        <a  type="submit" class="btn btn-primary"  href="#emailSuccess" >Finish!</a>
 
                     </div>
             </div>
