--- a/web/inner-pages/emailSuccess.html
+++ b/web/inner-pages/emailSuccess.html
@@ -21,7 +21,8 @@
             </div>
             <div class="col-md-4">
                 <p><h1>SUCCESS!!!</h1></p>
-                <canvas height="400"></canvas>
+                <canvas height="200"></canvas>
+                <a  type="submit" class="btn btn-primary" href="#logged_in" >Home</a>
             </div>
 
 
