--- a/web/inner-pages/gMail_SubTrigger.html
+++ b/web/inner-pages/gMail_SubTrigger.html
@@ -34,7 +34,7 @@
                         </div>
                     <div>
                         <a  type="submit" class="btn btn-primary" href="#logged_in" >Home</a>
-                        <a  type="submit" class="btn btn-primary"  href="#SubGMailAction" ng-click="triggerGmail(gmailinput)">Next</a>
+                        <a  type="submit" class="btn btn-primary"  href="#SubGMailAction" >Next</a>
                     </div>
 
                     </form>
