--- a/web/inner-pages/gMail_SubTrigger.html
+++ b/web/inner-pages/gMail_SubTrigger.html
@@ -18,24 +18,32 @@
             <div class="col-md-4">
                 <p><h1>Choose your trigger</h1></p>
                 <form id="gmail-form" role="form" name="form" ng-controller="SubGmailController" novalidate>
+
                     <div class="form-group">
-                        <label style="color:rgba(0, 0, 0, 0.78)">Insert email</label>
-                        <input type="email" class="form-control" id="email" placeholder="insert your email"
-                               ng-model="gmailinput.email" required="" name="email" >
-                        <br>
+                        <label style="color:rgba(255, 255, 255, 0.78)">Email address:</label>
+                        <input type="email" class="form-control" id="email" placeholder="insert your email" ng-model="gmailinput.email" required="" name="uEmail" >
+                        <div ng-show="form.$submitted || form.uEmail.$touched">
+                            <span ng-show="form.uEmail.$error.email"   style="color: #b81900">This is not a valid email</span>
+                        </div>
                     </div>
 
-                        <!--Subject e.mail -->
-                        <div class="form-group">
-                            <label for="comment">or / and the object</label>
-                            <textarea class="form-control" rows="5" id="subjectReceive"  placeholder="insert the subject"
-                                      ng-model="gmailinput.subjectReceive"  name="subjectReceive"
-                            ></textarea>
-                        </div>
+
+                    <!--Subject e.mail -->
+                    <div class="form-group">
+                        <label>or / and the object</label>
+                        <textarea class="form-control" rows="5" id="subjectReceive"  placeholder="insert the subject"
+                                  ng-model="gmailinput.subjectReceive"  name="subjectReceive"
+                        ></textarea>
+                    </div>
+
                     <div>
                         <a  type="submit" class="btn btn-primary" href="#logged_in" >Home</a>
                         <a  type="submit" class="btn btn-primary"  href="#SubGMailAction" >Next</a>
                     </div>
+                    <!--
+                    <a  type="submit" class="btn btn-primary" href="#logged_in" >Home</a>
+                    <a  type="submit" class="btn btn-primary"  href="#SubGMailAction" ng-click="triggerGmail(gmailinput)">Next</a>
+                    -->
 
                     </form>
                 </div>
