--- a/web/inner-pages/gMail_SubAction.html
+++ b/web/inner-pages/gMail_SubAction.html
@@ -32,7 +32,7 @@
                             ></textarea>
                         </div>
 
-                        <a  type="submit" class="btn btn-primary" href="#logged_in" >Home</a>
+                        <a  type="submit" class="btn btn-primary" href="#SubGMail" >Back</a>
                         <a  type="submit" class="btn btn-primary"  href="#emailSuccess" >Finish!</a>
 
                     </div>
