--- a/web/inner-pages/gMail_SubTrigger.html
+++ b/web/inner-pages/gMail_SubTrigger.html
@@ -40,7 +40,7 @@
 
                     <div>
                         <a  type="submit" class="btn btn-primary" href="#logged_in" >Back</a>
-                        <a  type="submit" class="btn btn-primary"    ng-click="triggerGmail(user)" >Next</a>
+                        <a  type="submit" class="btn btn-primary" ng-click="triggerGmail(user)" >Next</a>
                     </div>
                     <!--
                     http://localhost:8080/index.jsp#/SubGMail
@@ -55,7 +55,7 @@
             </div>
         </div>
     </div>
-
+</div>
 
 
 <!--href="#SubGMailAction" -->
