done gmail finished

--- a/web/inner-pages/gMail_SubAction.html
+++ b/web/inner-pages/gMail_SubAction.html
@@ -17,34 +17,48 @@
             </div>
             <div class="col-md-4">
                 <p><h1>Choose your action</h1></p>
-                <form id="gmail-form" role="form" name="form" ng-controller="recoveruserpasswordController" novalidate>
+                <form id="gmail-form" role="form" name="form" ng-controller="SubGmailActionController" novalidate>
+
                     <div class="form-group">
-                        <label style="color:rgba(0, 0, 0, 0.78)">Insert email</label>
-                        <input type="email" class="form-control" id="email" placeholder="insert your email"
-                               ng-model="gmailinput.email" required="" name="uEmail" >
-                        <br>
-
-                        <!--Subject e.mail -->
-                        <div class="form-group">
-                            <label for="comment">or / and the object</label>
-                            <textarea class="form-control" rows="5" id="subjectReceive"  placeholder="insert the subject"
-                                      ng-model="gmailinput.subjectReceive"  name="subjectReceive"
-                            ></textarea>
+                        <label>Email address:</label>
+                        <input type="email" class="form-control" id="email" placeholder="insert your email" ng-model="gmailinput.email" required="" name="uEmail" >
+                        <div ng-show="form.$submitted || form.uEmail.$touched">
+                            <span ng-show="form.uEmail.$error.email"   style="color: #b81900">This is not a valid email</span>
                         </div>
-
-                        <a  type="submit" class="btn btn-primary" href="#SubGMail" >Back</a>
-                        <a  type="submit" class="btn btn-primary"  href="#emailSuccess" >Finish!</a>
-
                     </div>
+
+
+                    <!--Subject e.mail -->
+                    <div class="form-group">
+                        <label>or / and the object</label>
+                        <textarea class="form-control" rows="5" id="subjectReceive"  placeholder="insert the subject"
+                                  ng-model="gmailinput.subjectReceive"  name="subjectReceive"
+                        ></textarea>
+                    </div>
+
+                    <div>
+                        <a  type="submit" class="btn btn-primary" href="#SubGMail" >Back</a>
+                        <a  type="submit" class="btn btn-primary"   ng-click="actionGmail(gmailinput)" >Finish!</a>
+                    </div>
+                    <!--
+                    http://localhost:8080/index.jsp#/SubGMail
+                    <a  type="submit" class="btn btn-primary" href="#logged_in" >Home</a>
+                    <a  type="submit" class="btn btn-primary"  href="#SubGMailAction" ng-click="triggerGmail(gmailinput)">Next</a>
+                    -->
+
+                </form>
             </div>
             <div class="col-md-4">
             </div>
         </div>
     </div>
 </div>
-
-
+</div>
 
 
 </body>
 </html>
+<!--
+<a  type="submit" class="btn btn-primary" href="#SubGMail" >Back</a>
+<a  type="submit" class="btn btn-primary"  href="#emailSuccess" >Finish!</a>
+-->
