--- a/web/inner-pages/yWeather.html
+++ b/web/inner-pages/yWeather.html
@@ -10,21 +10,32 @@
 <br>
 <br>
 <br>
+<style>
+    h1 {
+        text-align: center;
+    }
+
+
+</style>
 
 <div class="container-fluid">
+    <h1>Choose the trigger</h1>
     <div class="row">
-
         <div class="col-md-3">
+
         </div>
         <div class="col-md-6">
             <div class="row">
-                <h1>Choose the trigger</h1>
+
+                <br>
+                <br>
+
                 <div class="col-md-6">
                     <h2>
                         Tomorrow weather
                     </h2>
                     <p>
-                        What is the weather like tomorrow? Choose this trigger and the time at which you want to be notified!
+                        The weather of tomorrow: you can chose the location and the hour that you wish to monitor.
                     </p>
                     <p>
                         <a class="btn" href="#">Continue »</a>
@@ -43,42 +54,37 @@
                 </div>
             </div>
             <div class="row">
+                <br>
+                <br>
                 <div class="col-md-6">
                     <h2>
                         Sunrise/Sunset
                     </h2>
                     <p>
-                        You want to know when the sun rises today? Or what time takes the sunset?
+                        You wish to know when the sun rises today? Or what time takes the sunset?
                     </p>
                     <p>
-                        <a class="btn" href="#">View details »</a>
+                        <a class="btn" href="#">Continue »</a>
                     </p>
                 </div>
                 <div class="col-md-6">
                     <h2>
-                        Heading
+                        Monitor a special weather condition
                     </h2>
                     <p>
-                        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                    Do you wish to follow a special weather condition?
                     </p>
                     <p>
-                        <a class="btn" href="#">View details »</a>
+                        <a class="btn" href="#">Continue »</a>
                     </p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
 
-                    <button type="button" class="btn btn-default">
-                        Default
-                    </button>
                 </div>
                 <div class="col-md-6">
-
-                    <button type="button" class="btn btn-default">
-                        Default
-                    </button>
-                </div>
+             </div>
             </div>
         </div>
         <div class="col-md-3">
