--- a/web/inner-pages/yWeather.html
+++ b/web/inner-pages/yWeather.html
@@ -19,7 +19,7 @@
 </style>
 
 <div class="container-fluid">
-    <h1>Choose the trigger</h1>
+    <h1>Choose the trigger or <a style="color: #0a0a0a" href="#">go back </a></h1>
     <div class="row">
         <div class="col-md-3">
 
@@ -38,7 +38,7 @@
                         The weather of tomorrow: you can chose the location and the hour that you wish to monitor.
                     </p>
                     <p>
-                        <a class="btn" href="#">Continue »</a>
+                        <a class="btn" href="#customWeatherTrigger1">Continue »</a>
                     </p>
                 </div>
                 <div class="col-md-6">
